# text_attention

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_MHatten.cpp  src_idx.txt  src_idx_size.txt  state_dict_size.txt  vocab_de.txt  vocab_en.txt
model/: attention_transformer.h  bert.h  decoder.h  decoderLayer.h  decoderLayer_gpt2.h  decoder_gpt2.h  embedding.h  encoder.h  encoderLayer.h  feed_forward.h  functions.h  gpt2.h  layer.h  layer_norm.h  linear.h  max_tensor.h  multiheadattention.h  post_norm.h  pre_norm.h  residual.h  softmax.h  t5.h  tensor.h  top_model.h
